--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,21 +8,6 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
     type: vmess
-    server: www.coldstone.club
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.coldstone.club
-  - &id002
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
-    type: vmess
     server: www.crispyrainbow.biz
     port: 8080
     cipher: auto
@@ -35,8 +20,8 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id003
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_3
+  - &id002
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
     type: vmess
     server: www.darkroom.lol
     port: 8080
@@ -50,54 +35,7 @@ proxies:
       path: /
       headers:
         host: www.darkroom.lol
-  - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 05.kccic2pa.xyz
-    port: 50005
-    cipher: auto
-    uuid: 1d8963ab-0cd8-4091-93ca-4c6a7dbcd1f2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: alibaba-node.cn
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.31.16.104
-    port: 8080
-    cipher: auto
-    uuid: 3a6752b4-8353-4172-85b1-32202116714d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: asan3.azad1.tech
-  - &id006
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10848
-    udp: true
-    password: 329d1d2a-c4f5-471d-abd3-3f6f234947bb
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10850
-    udp: true
-    password: 329d1d2a-c4f5-471d-abd3-3f6f234947bb
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id008
+  - &id003
     name: 🇺🇸_US_美国_1
     type: vmess
     server: www.blueberrywindow.online
@@ -112,114 +50,8 @@ proxies:
       path: /
       headers:
         host: www.blueberrywindow.online
-  - &id009
-    name: 🇦🇺_AU_澳大利亚->🇺🇸_US_美国_1
-    type: trojan
-    server: 192.65.217.247
-    port: 443
-    udp: true
-    password: 933e3c9c-701e-45df-978b-ca8f42fb8871
-    sni: k5us2.yfjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /yfjc/kus2
-      headers:
-        host: k5us2.yfjc.sbs
-  - &id010
-    name: 🇦🇺_AU_澳大利亚->🇺🇸_US_美国_2
-    type: trojan
-    server: 192.65.217.200
-    port: 443
-    udp: true
-    password: 933e3c9c-701e-45df-978b-ca8f42fb8871
-    sni: k6us1.yfjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /yfjc/kus1
-      headers:
-        host: k6us1.yfjc.sbs
-  - &id011
-    name: 🇦🇲_AM_亚美尼亚->🇳🇱_NL_荷兰
-    type: trojan
-    server: 185.162.231.208
-    port: 443
-    udp: true
-    password: 933e3c9c-701e-45df-978b-ca8f42fb8871
-    sni: k8nl2.yfjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /yfjc/knl2
-      headers:
-        host: k8nl2.yfjc.sbs
-  - &id012
-    name: 🇮🇶_IQ_伊拉克->🇹🇷_TR_土耳其
-    type: vmess
-    server: 130.193.166.2
-    port: 443
-    cipher: auto
-    uuid: 7682b778-b64b-408b-8fb2-61d7c7fc43e5
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: soft8989.redirectme.net
-  - &id013
-    name: 🇱🇺_LU_卢森堡
-    type: trojan
-    server: 188.42.145.73
-    port: 443
-    udp: true
-    password: 933e3c9c-701e-45df-978b-ca8f42fb8871
-    sni: k6nl1.yfjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /yfjc/knl1
-      headers:
-        host: k6nl1.yfjc.sbs
-  - &id014
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: hamrahaval.asan3a.shop
-    port: 8080
-    cipher: auto
-    uuid: 3a6752b4-8353-4172-85b1-32202116714d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: asan3.azad1.tech
-  - &id015
+  - &id004
     name: 🇺🇸_US_美国_2
-    type: vmess
-    server: be1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: 38df59ec-30e2-45e9-86c7-5a58667e6994
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id016
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 34.221.71.169
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇺🇸_US_美国_4
     type: vmess
     server: www.crispyrainbow.online
     port: 8080
@@ -233,13 +65,98 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id018
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: 05.kccic2pa.xyz
+    port: 50005
+    cipher: auto
+    uuid: 1d8963ab-0cd8-4091-93ca-4c6a7dbcd1f2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 8080
+    cipher: auto
+    uuid: 5a1bd666-441a-4446-9b4b-3538f6209d31
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/f8ZKTGaGoC/
+      headers:
+        host: us5PhAx6xsj.fzbqfrse.xyz
+  - &id007
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.19.234.82
+    port: 8080
+    cipher: auto
+    uuid: 5a1bd666-441a-4446-9b4b-3538f6209d31
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/f8ZKTGaGoC/
+      headers:
+        host: us5PhAx6xsj.fzbqfrse.xyz
+  - &id008
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: 172.67.217.144
+    server: 35.87.209.22
+    port: 13489
+    cipher: auto
+    uuid: 61761e55-dff5-4f94-f75f-b0a4718bba98
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id009
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: 103.214.68.57
+    port: 10003
+    udp: true
+    password: 6x8HcghsjS
+    sni: yes998.chickenkiller.com
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: be1-vmess.sshmax.xyz
     port: 80
     cipher: auto
-    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
+    uuid: 38df59ec-30e2-45e9-86c7-5a58667e6994
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id011
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 18.134.162.104
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.144.2.113
+    port: 80
+    cipher: auto
+    uuid: 2bc07c42-4420-4b94-b029-f5f83a20602a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -247,74 +164,105 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: lv1.xv2ray.net
+        host: www.apple.com
+  - &id013
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 104.18.15.149
+    port: 80
+    cipher: auto
+    uuid: 2bc07c42-4420-4b94-b029-f5f83a20602a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: www.coldstone.club
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.coldstone.club
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: pt2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: 099b5b7a-9d71-43cd-80e3-b8fbe1cc2695
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id016
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 94.131.10.135
+    port: 80
+    cipher: auto
+    uuid: 099b5b7a-9d71-43cd-80e3-b8fbe1cc2695
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id017
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 3.9.87.53
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id018
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 23.137.248.47
+    port: 8080
+    cipher: auto
+    uuid: c65dd227-86bb-5854-bdf7-54c9c16acdb2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
   - &id019
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    name: 🇮🇪_IE_爱尔兰
     type: trojan
-    server: xibaozi.19890604.day
-    port: 10845
+    server: 54.77.32.3
+    port: 22222
     udp: true
-    password: 329d1d2a-c4f5-471d-abd3-3f6f234947bb
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: telegram-id-directvpn
+    sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
+    alpn:
+      - http/1.1
   - &id020
-    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10846
-    udp: true
-    password: 329d1d2a-c4f5-471d-abd3-3f6f234947bb
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10838
-    udp: true
-    password: 329d1d2a-c4f5-471d-abd3-3f6f234947bb
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10837
-    udp: true
-    password: 329d1d2a-c4f5-471d-abd3-3f6f234947bb
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10847
-    udp: true
-    password: 329d1d2a-c4f5-471d-abd3-3f6f234947bb
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_11
     type: ss
     server: 34.222.2.189
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id025
-    name: 🇺🇸_US_美国_7
-    type: trojan
-    server: 44.226.30.52
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -361,11 +309,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -391,11 +334,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -419,11 +357,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
